--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retos 11 al 20</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/stylesReto13.css">
 </head>
 <body>
-    
+    <div class="titulo">TITULO DE LA TABLA</div>
+
+    <table>
+        <tr>
+            <td colspan="3" class="verde">CELDA 1</td>
+        </tr>
+        <tr>
+            <td rowspan="2" id="azul">CELDA 2</td>
+            <td class="rojo">CELDA 3</td>
+            <td>CELDA 4</td>
+        </tr>
+        <tr>
+            <td class="rojo">CELDA 5</td>
+            <td rowspan="2" id="rosa">CELDA 6</td>
+        </tr>
+        <tr>
+            <td>CELDA 7</td>
+            <td class="rojo">CELDA 8</td>
+        </tr>
+    </table>
 </body>
 </html>
